# SNS-tools

./: .eslintrc.yml  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json  sns-tools.code-workspace  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
.storybook/: preview.tsx
src/: App.tsx  app.rs  main.rs  main.tsx  pages.rs  providers.rs  routes.rs
src-tauri/: .gitignore  Cargo.toml  Makefile.toml  development.env  prepare_sqlx.sh  tauri.conf.json
src-tauri/.sqlx/: query-1e9045f52c002a19b815351fee1c7ee7520478ff4f5886b4523fb0dc4df0e204.json  query-358f81fdabb3b25a3eb65cb81ea1010eef57a605545b6b652d7319f78e726c5d.json  query-702a5d54621d14553df3e141253ef81636c87ec4295a3d2679576ab7bc753d36.json  query-75bc9c7eb286c9e8aaecb4b45d1e64f5cbb2f22eac03db449ead6b3d5a7ad581.json  query-a27f1ac383b806a01e3615b43f2de2ac0189331b93ff74af0a6f5d509b3745d0.json  query-a711eb8658bd17fcbe2a45b62367aa41953bd5ea256110203efcec112c1f08ec.json  query-b5b9e64c2b9f6951755ffce954a5ce310d952a5503a4354e3c75ce1a33378c0c.json  query-e3e28c97fc08d94dd55319405e83cce049a9da312f90348d7b59b6848396ebd3.json  query-f1531bc2094e43bdb8a7e1a62a7346dd0e440469587ecdfeceddf5e559b1fda9.json
src-tauri/entity/: Cargo.toml  README.md
src-tauri/entity/src/: column.rs  columns.rs  item.rs  item_tagging.rs  item_taggings.rs  items.rs  lib.rs  prelude.rs  section.rs  sections.rs  tag.rs  tags.rs  website.rs  websites.rs
src-tauri/migration/: Cargo.toml  README.md
src-tauri/migration/src/: lib.rs  m20240227_151203_create_item.rs  m20240227_151203_create_items.rs  m20240227_151313_create_website.rs  m20240227_151313_create_websites.rs  m20240227_151331_create_section.rs  m20240227_151331_create_sections.rs  m20240227_151339_create_column.rs  m20240227_151339_create_columns.rs  m20240227_151347_create_tag.rs  m20240227_151347_create_tags.rs  m20240228_163719_create_item_tagging.rs  m20240228_163719_create_item_taggings.rs
src-tauri/migrations/: 20240116024659_create_tables.down.sql  20240116024659_create_tables.up.sql
src-tauri/migrations/2024-01-04-045741_create_items/: up.sql
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs
src-tauri/service/src/item/: query.rs
src-tauri/src/: base_ctx.rs  command.rs  controllers.rs  db.rs  entities.rs  gateways.rs  main.rs  router.rs  schema.rs  settings.rs  use_cases.rs  utility.rs  x.rs
src-tauri/src/command/: settings.rs
src-tauri/src/controllers/: settings_controller.rs
src-tauri/src/entities/: date_at.rs  filtered.rs  id.rs  item.rs  settings.rs
src-tauri/src/gateways/: item_repository.rs  models.rs  settings_repository.rs
src-tauri/src/router/: app.rs
src-tauri/src/use_cases/: load_settings_use_case.rs  update_settings_use_case.rs
src-tauri/src/utility/: sqlx.rs  tauri.rs  types.rs
src-tauri/src/x/: client.rs  command.rs  interface.rs  router.rs
src-tauri/src/x/client/: oauth1.rs
src/components/: layout.rs
src/components/Elements/: index.ts
src/components/Elements/Button/: Button.stories.tsx  Button.tsx
src/components/Elements/ConfirmationDialog/: ConfirmationDialog.stories.tsx  ConfirmationDialog.tsx
src/components/Elements/Dialog/: Dialog.stories.tsx  Dialog.tsx
src/components/Elements/Link/: Link.stories.tsx  Link.tsx
src/components/Elements/Spinner/: Spinner.stories.tsx  Spinner.tsx
src/components/Head/: Head.tsx
src/components/Layout/: AppLayout.tsx  ContentLayout.tsx  DrawerList.tsx  Logo.tsx  MainLayout.tsx  MobileSidebar.tsx  SideNavigation.tsx  Sidebar.tsx  ToolbarMenu.tsx  UserNavigation.tsx  index.ts
src/configs/: zod.ts
src/configs/i18n/: en-US.json  index.ts  ja-JP.json
src/configs/zod/: index.ts
src/features/items/: ItemsRoutes.tsx
src/features/items/i18n/: configs.ts  items.en-US.json  items.ja-JP.json
src/features/items/pages/: List.tsx  Show.tsx
src/features/x/routes/: index.tsx  (+1 more)
src/hooks/: useDisclosure.ts
src/i18n/: EnUS.json  configs.ts  en-US.json  en.json  ja-JP.json
src/pages/: dashboard.rs  not_found.rs  x.rs
src/providers/: CustomThemeProvider.tsx  app.tsx  index.tsx
src/routes/: index.tsx
src/stories/: Button.tsx  Header.tsx
src/tauri/command/: settings.ts  systemPassword.ts
src/types/rspc/: bindings.ts
src/utils/: client.ts  format.ts
(+16 files in other folders)
