[package]
authors = ["Toshiki"]
description = "Passwords"
edition = "2021"
license = "MIT"
name = "passwords"
repository = ""
version = "0.0.0"

[workspace]
members = ["entity", "migration", "service"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.5.1", features = [] }# features = ["codegen", "config-json5", "config-toml", "isolation", "quote", "tauri-codegen"]

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
chrono = {version = "0.4.34", features = ["serde"] }
env_logger = "0.11.2"
futures = "0.3.30"
libsqlite3-sys = {version = "0.27.0", default-features = false, features = ["bundled-sqlcipher"] }
log = "0.4.20"
rand = "0.8.5"
sea-orm = { version = "0.12.14", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono" ] }
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = {version = "0.7.3", features = ["chrono", "migrate", "runtime-tokio-rustls", "sqlite"] }
tauri = {version = "1.6.0", features = ["http-all", "shell-open"] }
tokio = {version = "1.36.0", features = ["full"] }
toml = "0.8.10"

entity = { path = "entity" }
migration = { path = "migration" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
