[package]
edition = "2021"
name = "service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }

entity = { path = "../entity" }
